--- a/servers/Sigwal-1.20.1/files/iris.properties
+++ b/servers/Sigwal-1.20.1/files/iris.properties
@@ -1,8 +1,8 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sat Sep 27 21:00:07 KST 2025
+#Mon Oct 20 02:28:01 KST 2025
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
-maxShadowRenderDistance=32
-shaderPack=Sildur's Vibrant Shaders v1.51 Medium.zip
 enableShaders=true
+maxShadowRenderDistance=32
+shaderPack=ComplementaryUnbound_r5.5.1.zip
